--- a/client/css/styles-html.css
+++ b/client/css/styles-html.css
@@ -10,7 +10,7 @@ body {
     grid-template-rows: 1fr;
     font-family:Verdana, Geneva, Tahoma, sans-serif;
 }
-#footer{
+.footer{
     backdrop-filter: blur(20px);
     width: 100%;
     text-align: right;
@@ -18,7 +18,7 @@ body {
     position:absolute;
     bottom:0
 }
-#footer>p{
+.footer>p{
     margin-right: 2%;
 }
 
@@ -34,7 +34,7 @@ body {
     }
 }
 
-#welcome-screen{
+.welcome-screen{
     display:flex;
     flex-direction:column;
     justify-content: center;
@@ -48,7 +48,7 @@ body {
     position: relative;
     box-shadow:1px 1px 40px rgb(1, 1, 1);
 }
-#welcome-screen>h1{
+.welcome-screen>h1{
     border-radius: 50px;
     padding: 15px;
     margin-left: 20%;
@@ -59,11 +59,11 @@ body {
     animation-iteration-count: infinite;
     animation-direction: alternate;
 }
-#welcome-screen>p{   
+.welcome-screen>p{   
     opacity: 70%;
     color: lightgrey;
 }
-#welcome-screen>button{
+.welcome-screen>button{
     border-radius: 50px;
     margin-top: 5%;
     margin-left: 40%;
@@ -75,7 +75,7 @@ body {
     transition-duration: 400ms;
     border: none;
 }
-#welcome-screen>button:hover{
+.welcome-screen>button:hover{
     scale:2;
     background-color: black;
     color:white;
