--- a/src/components/chat.css
+++ b/src/components/chat.css
@@ -1,42 +1,40 @@
 body {
-    background-image:url("https://images.unsplash.com/photo-1687639160028-95d24c15d04d?fm=jpg&q=60&w=3000&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NHx8Zm9uZG9zJTIwZGUlMjBwYW50YWxsYSUyMGRlbCUyMG1vZG8lMjBvc2N1cm98ZW58MHx8MHx8fDA%3D");
+    background-image: url("https://images.unsplash.com/photo-1687639160028-95d24c15d04d?fm=jpg&q=60&w=3000&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NHx8Zm9uZG9zJTIwZGUlMjBwYW50YWxsYSUyMGRlbCUyMG1vZG8lMjBvc2N1cm98ZW58MHx8MHx8fDA%3D");
     margin: 0;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
     display: flex;
-    align-items: center;
-    place-content: center;
-    height: 100vh;
-    padding: 100px;
-    grid-template-rows: 1fr;
-    font-family:Verdana, Geneva, Tahoma, sans-serif;
+    flex-direction: column;
+    height: 100%;
+    margin-top: 100px;
 }
-.footer{
 
+.chat {
+    flex: 1;
+    background:transparent;
+    backdrop-filter: blur(10px);
+    border-radius: 20px;
+    box-shadow: 1px 1px 30px rgba(255, 255, 255);
+    overflow: hidden;
+    width: 500px;
+    height: 700px;
+    margin: 20px auto; 
+    padding: 20px;
+}
+
+.footer {
     backdrop-filter: blur(20px);
     width: 100%;
     text-align: right;
-    box-shadow:1px 1px 40px rgb(1, 1, 1);
-    position:absolute;
-    bottom:0
+    box-shadow: 1px 1px 40px rgba(1, 1, 1);
+    position: absolute;
+    margin: 0;
+    bottom: 0;
 }
-.footer>p{
+
+.footer p {
     margin-right: 2%;
 }
 
-
-/*CHAT*/
-.chat {
-    flex:1;
-    background: transparent;
-    backdrop-filter: blur(10px);
-    border-radius: 20px;
-    overflow: hidden;
-    width: 350px;
-    height: 90%;
-    position: relative;
-    box-shadow:1px 1px 30px rgb(255, 255, 255);
-    padding:20px
-}
 .delete-button {
     background: red;
     color: white;
@@ -52,7 +50,7 @@ body {
 .delete-button:hover{
     background-color: black;
     color: red;
-    scale:1.008;/* CONFIGURADO POR ESTÉTICA PARA NO TOCAR EL BORDE*/
+    scale:1.008;/* config to not touch the edge*/
     box-shadow: 0 0 20px red;
 }
 .chat>ul{
